# sona

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.ts
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/audio/src/vst/: host.rs
crates/vst/: Cargo.toml
crates/vst/src/base/: funknown.rs
crates/vst/src/gui/: plug_view.rs
crates/vst/src/vst/: host_application.rs
crates/vst3/: Cargo.toml
crates/vst3/src/: lib.rs
crates/vst3/src/base/: funknown.rs
crates/vst3/src/platform/: macos.rs  windows.rs
crates/vst3/src/vst/: audio_processor.rs  host_application.rs
crates/vst3_macro/: Cargo.toml
crates/vst3_macro/src/: lib.rs
src/: App.css  App.tsx  globals.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  plugins.rs  settings.rs
src/app/dashboard/: layout.tsx  page.tsx
src/components/: audio-visualizer.tsx  native-window-test.tsx  playlist-sidebar.tsx  practice-stats-modal.tsx  settings-modal.tsx  sheet-music-viewer.tsx  song-info-modal.tsx  title-bar.tsx  unified-controls.tsx  video-player.tsx  vst-dock.tsx  vst-plugin.tsx
src/components/ui/: menubar.tsx  sidebar.tsx
src/lib/: constants.ts
