[workspace]
members = [
    "crates/audio",
    "crates/vst3",
    "crates/vst3_macro",
    "src-tauri"
]
default-members = ["src-tauri"]
resolver = "2"

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
audio = { path = "crates/audio" }
vst3 = { path = "crates/vst3" }
vst3_macro = { path = "crates/vst3_macro" }
sona = { path = "src-tauri" }

ahash = "0.8.12"
anyhow = "1.0.98"
core-foundation = "0.10.1"
cpal = { version = "0.16.0", features = ["asio"] }
dirs = "6.0.0"
image = "0.25.6"
log = "0.4.27"
raw-window-handle = "0.6.2"
ringbuf = "0.4.8"
rodio = { version = "0.20.1" }
rustc-hash = "2.1.1"
rust-embed = { version = "8.4", features = ["include-exclude"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
smallvec = "1.13.2"
thiserror = "2.0.12"
tracing-subscriber = { version = "0.3.19", features = ["local-time", "env-filter"] }

# [patch.crates-io]
# cpal = { git = "https://github.com/zed-industries/cpal", rev = "fd8bc2fd39f1f5fdee5a0690656caff9a26d9d50" }