[package]
name = "vst3"
version = "0.1.0"
edition = "2024"

[dependencies]
vst3_macro.workspace = true

anyhow.workspace = true
libc = "0.2.158"
libloading = "0.8.5"
winapi = "0.3.9"
windows-core = "0.61.2"
windows-sys = "0.59.0"
log.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
